@@ -142,13 +142,43 @@
           and important. </p>
         <table width="95%" border="0" cellspacing="2" cellpadding="0" bgcolor="#CCCCCC" align="center">
           <tr> 
-            <td><pre><font color="#006600">	// create test scene node 1, with the new created material type 1</font><br><br>	scene::ISceneNode* node = smgr-&gt;addCubeSceneNode(50);<br>	node-&gt;setPosition(core::vector3df(0,0,0));<br>	node-&gt;setMaterialTexture(0, driver-&gt;getTexture(&quot;../../media/wall.bmp&quot;));<br>	node-&gt;setMaterialType((video::E_MATERIAL_TYPE)newMaterialType1);<br><br>	smgr-&gt;addTextSceneNode(gui-&gt;getBuiltInFont(), <br>			L&quot;PS &amp; VS &amp; EMT_SOLID&quot;, <br>			video::SColor(255,255,255,255),	node);<br><br>	scene::ISceneNodeAnimator* anim = smgr-&gt;createRotationAnimator(<br>			core::vector3df(0,0.3f,0));<br>	node-&gt;addAnimator(anim);<br>	anim-&gt;drop();</pre></td>
+            <td><pre><font color="#006600">
+	// create test scene node 1, with the new created material type 1</font>
+
+	scene::ISceneNode* node = smgr-&gt;addCubeSceneNode(50);
+	node-&gt;setPosition(core::vector3df(0,0,0));
+	node-&gt;setMaterialTexture(0, driver-&gt;getTexture(&quot;../../media/wall.bmp&quot;));
+	node-&gt;setMaterialFlag(video::EMF_LIGHTING, false);
+	node-&gt;setMaterialType((video::E_MATERIAL_TYPE)newMaterialType1);
+
+	smgr-&gt;addTextSceneNode(gui-&gt;getBuiltInFont(),
+			L&quot;PS &amp; VS &amp; EMT_SOLID&quot;,
+			video::SColor(255,255,255,255),	node);
+
+	scene::ISceneNodeAnimator* anim = smgr-&gt;createRotationAnimator(
+			core::vector3df(0,0.3f,0));
+	node-&gt;addAnimator(anim);
+	anim-&gt;drop();</pre></td>
           </tr>
         </table>
         <p> Same for the second cube, but with the second material we created.</p>
         <table width="95%" border="0" cellspacing="2" cellpadding="0" bgcolor="#CCCCCC" align="center">
           <tr> 
-            <td><pre>	<font color="#006600">// create test scene node 2, with the new created material type 2</font><br><br>	node = smgr-&gt;addCubeSceneNode(50);<br>	node-&gt;setPosition(core::vector3df(0,-10,50));<br>	node-&gt;setMaterialTexture(0, driver-&gt;getTexture(&quot;../../media/wall.bmp&quot;));<br>	node-&gt;setMaterialType((video::E_MATERIAL_TYPE)newMaterialType2);<br><br>	smgr-&gt;addTextSceneNode(gui-&gt;getBuiltInFont(), <br>			L&quot;PS &amp; VS &amp; EMT_TRANSPARENT&quot;, <br>			video::SColor(255,255,255,255),	node);<br><br>	anim = smgr-&gt;createRotationAnimator(core::vector3df(0,0.3f,0));<br>	node-&gt;addAnimator(anim);<br>	anim-&gt;drop();</pre></td>
+            <td><pre>	<font color="#006600">// create test scene node 2, with the new created material type 2</font>
+
+	node = smgr-&gt;addCubeSceneNode(50);
+	node-&gt;setPosition(core::vector3df(0,-10,50));
+	node-&gt;setMaterialTexture(0, driver-&gt;getTexture(&quot;../../media/wall.bmp&quot;));
+	node-&gt;setMaterialFlag(video::EMF_LIGHTING, false);
+	node-&gt;setMaterialType((video::E_MATERIAL_TYPE)newMaterialType2);
+
+	smgr-&gt;addTextSceneNode(gui-&gt;getBuiltInFont(),
+			L&quot;PS &amp; VS &amp; EMT_TRANSPARENT&quot;,
+			video::SColor(255,255,255,255),	node);
+
+	anim = smgr-&gt;createRotationAnimator(core::vector3df(0,0.3f,0));
+	node-&gt;addAnimator(anim);
+	anim-&gt;drop();</pre></td>
           </tr>
         </table>
         <br>
@@ -157,7 +187,15 @@
         <br>
         <table width="95%" border="0" cellspacing="2" cellpadding="0" bgcolor="#CCCCCC" align="center">
           <tr> 
-            <td><pre>	<font color="#006600">// add a scene node with no shader </font><br><br>	node = smgr-&gt;addCubeSceneNode(50);<br>	node-&gt;setPosition(core::vector3df(0,50,25));<br>	node-&gt;setMaterialTexture(0, driver-&gt;getTexture(&quot;../../media/wall.bmp&quot;));<br>	smgr-&gt;addTextSceneNode(gui-&gt;getBuiltInFont(), L&quot;NO SHADER&quot;,<br>		video::SColor(255,255,255,255), node);<br></pre></td>
+            <td><pre>	<font color="#006600">// add a scene node with no shader </font>
+
+	node = smgr-&gt;addCubeSceneNode(50);
+	node-&gt;setPosition(core::vector3df(0,50,25));
+	node-&gt;setMaterialTexture(0, driver-&gt;getTexture(&quot;../../media/wall.bmp&quot;));
+	node-&gt;setMaterialFlag(video::EMF_LIGHTING, false);
+	smgr-&gt;addTextSceneNode(gui-&gt;getBuiltInFont(), L&quot;NO SHADER&quot;,
+		video::SColor(255,255,255,255), node);
+            </pre></td>
           </tr>
         </table>
         <br>
