@@ -17,6 +17,7 @@ Changes in version 1.1 (??? 2006)
 - In addition to the Cube scene node (formerly test scene node) there is now also a sphere scene node available,
   with an adjustable amount of polygons. Use ISceneManager::addSphereSceneNode to create it.
   Thx to Alfaz93 for making available his code on which this node is based on.
+  Note that both nodes now use default material settings, e.g. lighting is enabled by default.
 
 - Fixed Linux keyhandling for many keys.
 
